[package]
name = "sudoku-tutor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bitvec = "1.0.1"
clap = {version = "4.6.0", features = ["derive"]}
color-eyre = "0.6.5"
colored = "3.1.1"
crossterm = "0.29.0"
itertools = "0.14.0"
log = "0.4.29"
ndarray = "0.17.2"
ratatui = "0.30.0"
rayon = "1.12.0"
rayon-progress = "1.0.0"
thiserror = "2.0.18"
xml = "1.0"
