[package]
name = "sudoku-tutor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bitvec = "1.0.1"
clap = {version = "4.6.0", features = ["derive"]}
color-eyre = "0.6.5"
crossterm = "0.29.0"
ena = "0.14.4"
itertools = "0.14.0"
log = "0.4.29"
ratatui = "0.30.0"
rayon = "1.12.0"
rayon-progress = "1.0.0"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tui-big-text = "0.8.4"
tui-input = { version = "0.15.2", default-features = false, features = ["crossterm"] }
xml = "1.0"
